tests/fixtures/positive/method-signatures/SingleParameterMustBeSingleLine.cls
public class Example {
    // Valid: Zero parameters on one line
    public void method1() {
    }

    // Valid: Single parameter on one line
    public void method2(String value) {
    }

    // Valid: Multiple parameters can be multi-line
    public void method3(
        String param1,
        Integer param2
    ) {
    }
}

