tests/fixtures/negative/method-signatures/SingleParameterMustBeSingleLine.cls
public class Example {
    // Violation: Zero parameters on multiple lines
    public void
        method1() {
    }

    // Violation: Single parameter on multiple lines
    public void method2(
        String value) {
    }

    // Violation: Parameter and block on different lines
    public String method3(String name
    ) {
    }
}

